--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,50 @@
 version: 2.1
-
-orbs:
-  maven: circleci/maven@0.0.12
-
+jobs:
+  build:
+    docker:
+      - image: 'cimg/base:2020.11'
+    steps:
+      - run:
+          command: 'docker build -t spark:$BUILD_NUMBER .'
+  test:
+    docker:
+      - image: 'cimg/base:2020.11'
+    steps:
+      - run:
+          command: 'docker run -d --name www -p 8090:8080 spark:$BUILD_NUMBER'
+      - run:
+          command: sleep 7
+      - run:
+          command: chmod +x ./httpcheck.sh
+      - run:
+          command: ./httpcheck.sh
+  deploy:
+    docker:
+      - image: 'cimg/base:2020.11'
+    steps:
+      - run:
+          command: 'docker tag spark:$BUILD_NUMBER liorlieb7/spark:$BUILD_NUMBER'
+      - run:
+          command: 'docker push liorlieb7/spark:$BUILD_NUMBER'
+  save-space:
+    docker:
+      - image: 'cimg/base:2020.11'
+    steps:
+      - run:
+          command: docker image prune -f
+      - run:
+          command: 'docker rmi -f spark:$BUILD_NUMBER liorlieb7/spark:$BUILD_NUMBER'
 workflows:
-  maven_test:
+  version: 2
+  build-and-test:
     jobs:
-      - maven/test # checkout, build, test, and upload test results
+      - build
+      - test:
+          requires:
+            - build
+      - deploy:
+          requires:
+            - test
+      - save-space:
+          requires:
+            - deploy
